# easemob-facade

./: .gitignore  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/tv/athena/helloc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  easemob.cpp  native-lib.cpp
app/src/main/java/com/salton123/easemob/: Facade.kt
app/src/main/java/tv/athena/helloc/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/tv/athena/helloc/: ExampleUnitTest.kt
easemoblib/src/androidTest/java/com/salton123/easemob/: ExampleInstrumentedTest.kt
easemoblib/src/main/: AndroidManifest.xml
easemoblib/src/main/cpp/: easemob.cpp
easemoblib/src/main/java/com/salton123/easemob/: Facade.kt
easemoblib/src/test/java/com/salton123/easemob/: ExampleUnitTest.kt
